# yolo-inference.rs

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  Taskfile.yml  build.rs  pyproject.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
assets/configs/: large-batch.toml  one-image.toml  online-predict.toml  small-batch.toml  unbatchable-model.toml
cpp_headers/: image_utils.h  path_utils.h  vtk_utils.h  yolo_common.h  yolo_vtk_utils.h
cpp_src/: main.cpp  offline-predict.main.cpp  online-predict.main.cpp  vtk-api.main.cpp
examples/: direct_run.rs  online_run.rs  toml_run.rs
python/: main.py
src/: annotate.rs  error.rs  ffi.rs  infer_fn.rs  lib.rs  logging.rs  main.rs  predict.rs  progress_bar.rs  source.rs  toml_utils.rs
src/annotate/: annotate_uitls.rs  classification.rs  color.rs  detection.rs  font.rs  obb.rs  pose.rs
src/ffi/: cpp_ffi.rs  python_ffi.rs
src/infer_fn/: batch_channel_ppl.rs  batch_sequential.rs  batch_utils.rs  channel_ppl.rs  sequential.rs
src/source/: batch_loader.rs  loader.rs  source_utils.rs
